objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Inquiry Process</fullName>
        <description>Process for logging customer inquiry cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Product Support Process</fullName>
        <description>Process for logging product support cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Days_Since_Last_Update__c</fullName>
        <formula>today()-Account.LastActivityDate</formula>
        <label>Days Since Last Update</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Has_Extended_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Product Has Extended Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Purchase_Date__c</fullName>
        <label>Product Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Total_Warranty_Days__c</fullName>
        <label>Product Total Warranty Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Summary__c</fullName>
        <label>Warranty Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Booyah_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Booyah</label>
        <queue>Booyah</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Panel1_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Panel1</label>
        <queue>Panel1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Platinum_Support_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Platinum Support</label>
        <queue>Platinum_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Support_Tier_1_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Product Support Tier 1</label>
        <queue>Product_Support_Tier_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Product_Support_Tier_2_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Product Support Tier 2</label>
        <queue>Product_Support_Tier_2</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Inquiry</fullName>
        <active>true</active>
        <businessProcess>Inquiry Process</businessProcess>
        <description>Record type for inquiries</description>
        <label>Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Support</fullName>
        <active>true</active>
        <businessProcess>Product Support Process</businessProcess>
        <description>Record type for product support cases</description>
        <label>Product Support</label>
    </recordTypes>
</CustomObject>